# claude-x

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/: ROADMAP_v0.6.0.md
src/claude_x/: __init__.py  analytics.py  cli.py  extensions.py  extractor.py  i18n.py  indexer.py  mcp_server.py  models.py  prompt_coach.py  prompt_library.py  scoring.py  storage.py
tests/: test_scoring.py
